--- a/templates/partials/flickr-photo-lightbox.html.twig
+++ b/templates/partials/flickr-photo-lightbox.html.twig
@@ -1,5 +1,5 @@
  <div id="lightbox-{{ photo.id() }}" class="flickr-lightbox">
-    <img src="{{ photo.url_m() }}">
+    <img src="{{ photo.url(params['display-format-photo-lightbox']) }}">
     <figcaption>{{ photo.title() }}</figcaption>
-    <span><a href="{{ photo.url_original() }}" target='_blank'>High resolution version</a></span>
+    <span><a href="{{ photo.url('o') }}" target='_blank'>High resolution version</a></span>
 </div>
