--- a/templates/partials/flickr-photo.html.twig
+++ b/templates/partials/flickr-photo.html.twig
@@ -1,5 +1,5 @@
 <a href="#" data-featherlight="#lightbox-{{ photo.id() }}" class="flickr-photo">
-    <img src="{{ photo.url_sq() }}">
+    <img src="{{ photo.url(params['display-format-photo']) }}">
     <figcaption>{{ photo.title() }}</figcaption>
 </a>
 {% include 'partials/flickr-photo-lightbox.html.twig' %}
