--- a/templates/partials/flickr-collection.html.twig
+++ b/templates/partials/flickr-collection.html.twig
@@ -1,10 +1,14 @@
+{% if count(collection.sets()) > 0 or not params['hide-empty-collections'] %}
 <div class="flickr flickr-collection">
-<h2>{{ collection.title() }}</h2>
-<h3>{{ collection.description() }}</h3>
+<{{params['collection-title-tag']}}>{{ collection.title() }}</{{params['collection-title-tag']}}>
+{% if collection.description() %}
+<{{params['collection-description-tag']}}>{{ collection.description() }}</{{params['collection-description-tag']}}>
+{% endif %}
 {% for set in collection.sets() %}
     {% include 'partials/flickr-photoset.html.twig' with {'photoset':set} %}
 {% endfor %}
 </div>
+{% endif %}
 {% for current in collection.collections() %}
     {% include 'partials/flickr-collection.html.twig' with {'collection':current} %}
 {% endfor %}
