--- a/templates/partials/flickr-photo-lightbox.html.twig
+++ b/templates/partials/flickr-photo-lightbox.html.twig
@@ -1,4 +1,4 @@
- <figure id="lightbox-{{ photo.id() }}" class="flickr-lightbox">
+ <figure id="lightbox-{{ photo.id() }}" class="flickr-lightbox {{params['photo-lightbox-class']}}">
     <figcaption>
         <h4 class="flickr-lightbox-title">{{ photo.title() }}</h4>
         <div class="flickr-lightbox-links">
